# fullscreen-dim

./: Cargo.toml  README.md
src/: main.rs
